my-apps/media/worldmonitor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: worldmonitor
  namespace: worldmonitor
  labels:
    external-dns: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: vanillax.me
spec:
  parentRefs:
    - kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "worldmonitor.vanillax.me"
  rules:
    - backendRefs:
        - name: worldmonitor
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
